libs/wingc/src/jsify/snapshots/identify_field_in_brackets.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    bring cloud;
    class A {
      bucket: cloud.Bucket;

      init() { this.bucket = new cloud.Bucket(); }

      inflight foo() {
        (this.bucket).put("hello", "world");
      }
    }
    
```

## inflight.A.js

```js
module.exports = function({  }) {
  class A {
    async foo() {
      (await this.$this_bucket.put("hello","world"));
    }
    constructor({ $this_bucket }) {
      this.$this_bucket = $this_bucket;
    }
  }
  return A;
}
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const std = $stdlib.std;
const $wing_is_test = process.env.WING_IS_TEST === "true";
const $AppBase = $stdlib.core.App.for(process.env.WING_MODEL);
const cloud = require('@winglang/sdk').cloud;
class $Root extends $stdlib.std.Resource {
  constructor(scope, id) {
    super(scope, id);
    class A extends $stdlib.std.Resource {
      constructor(scope, id, ) {
        super(scope, id);
        this.bucket = this.node.root.newAbstract("@winglang/sdk.cloud.Bucket",this,"cloud.Bucket");
        this._addInflightOps("foo", "$inflight_init");
      }
      static _toInflightType(context) {
        return $stdlib.core.NodeJsCode.fromInline(`
          require("./inflight.A.js")({
          })
        `);
      }
      _toInflight() {
        return $stdlib.core.NodeJsCode.fromInline(`
          (await (async () => {
            const AClient = ${A._toInflightType(this).text};
            const client = new AClient({
              $this_bucket: ${this._lift(this.bucket)},
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `);
      }
      _registerBind(host, ops) {
        if (ops.includes("foo")) {
          A._registerBindObject(this.bucket, host, ["put"]);
        }
        super._registerBind(host, ops);
      }
    }
  }
}
class $App extends $AppBase {
  constructor() {
    super({ outdir: $outdir, name: "main", plugins: $plugins, isTestEnvironment: $wing_is_test });
    if ($wing_is_test) {
      new $Root(this, "env0");
      const $test_runner = this.testRunner;
      const $tests = $test_runner.findTests();
      for (let $i = 1; $i < $tests.length; $i++) {
        new $Root(this, "env" + $i);
      }
    } else {
      new $Root(this, "Default");
    }
  }
}
new $App().synth();
```

