libs/wingc/src/jsify/snapshots/inflight_field_from_inflight.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    class MyType {
      inflight s: str;
      inflight init() {
        this.s = "hey there!";
      }
      inflight foo() {
        log(this.s);
      }
    }
    
```

## inflight.MyType-1.js

```js
module.exports = function({  }) {
  class MyType {
    constructor({  }) {
    }
    async foo() {
      {console.log(this.s)};
    }
    async $inflight_init() {
      this.s = "hey there!";
    }
  }
  return MyType;
}
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $constructs = require('constructs');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
class $Root extends $constructs.Construct {
  constructor(scope, id) {
    super(scope, id);
    class MyType extends $constructs.Construct {
      constructor(scope, id, ) {
        super(scope, id);
      }
      static _toInflightType(context) {
        return `
          require("./inflight.MyType-1.js")({
          })
        `;
      }
      _toInflight() {
        return `
          (await (async () => {
            const MyTypeClient = ${MyType._toInflightType(this)};
            const client = new MyTypeClient({
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `;
      }
      _getInflightOps() {
        return ["s", "foo", "$inflight_init"];
      }
    }
  }
}
const $App = $stdlib.core.App.for(process.env.WING_TARGET);
new $App({ outdir: $outdir, name: "main", rootConstruct: $Root, plugins: $plugins, isTestEnvironment: $wing_is_test, entrypointDir: process.env['WING_SOURCE_DIR'], rootId: process.env['WING_ROOT_ID'] }).synth();
```

